--- a/AbroadAdvisor/Views/Student/Add.cshtml
+++ b/AbroadAdvisor/Views/Student/Add.cshtml
@@ -5,7 +5,7 @@
 @{
     bool addingStudent = Model == null || Model.Id == default(int);
     ViewBag.Title = addingStudent ? "Add" : "Edit";
-    string submitButtonText = addingStudent ? "Add Student Profile" : "Edit Student Profile";
+    string submitButtonText = addingStudent ? "Add Student Profile" : "Save Changes";
 }
 
 @section FooterScript {
@@ -99,6 +99,19 @@
                         <div class="form-group">
                             @Html.LabelFor(s => s.Citizenship)
                             @Html.DropDownListFor(s => s.Citizenship, ViewBag.Countries as SelectList, "Please Select", new { @class = "form-control" })
+                        </div>
+
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    @Html.LabelFor(s => s.SelectedLanguages)
+                                    @Html.ListBoxFor(s => s.SelectedLanguages, new MultiSelectList(ViewBag.Languages, "Id", "Name"), new { @class = "multiselect", multiple = "multiple" })
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                </div>
+                            </div>
                         </div>
 
                         <div class="row">
