--- a/AbroadAdvisor/Views/Student/Add.cshtml
+++ b/AbroadAdvisor/Views/Student/Add.cshtml
@@ -6,21 +6,28 @@
     bool addingStudent = Model == null || Model.Id == default(int);
     ViewBag.Title = addingStudent ? "Add" : "Edit";
     string submitButtonText = addingStudent ? "Add Student Profile" : "Save Changes";
+
+    IEnumerable<int> studyAbroadCountries = Enumerable.Empty<int>();
+    IEnumerable<int> studyAbroadYears = Enumerable.Empty<int>();
+    IEnumerable<int> studyAbroadPeriods = Enumerable.Empty<int>();
+    
+    if (Model != null)
+    {
+        studyAbroadCountries = Model.StudyAbroadCountry;
+        studyAbroadYears = Model.StudyAbroadYear;
+        studyAbroadPeriods = Model.StudyAbroadPeriod;
+    }
 }
 
 @section FooterScript {
     <script>
         $(function () {
-            $.each(['#DateOfBirth', '#InitialMeeting'], function (i, val) {
-                $(val).addClass('form-control');
-                $(val).datepicker({
-                    format: 'm/d/yyyy'
-                });
-            });
-            $('.multiselect').multiselect({
-                numberDisplayed: 1,
-                buttonContainer: '<div class="button-default" />'
-            });
+            Bennett.AbroadAdvisor.initStudentAddEdit();
+            Bennett.AbroadAdvisor.addStudyAbroadRows(
+                [@String.Join(",", studyAbroadCountries)],
+                [@String.Join(",", studyAbroadYears)],
+                [@String.Join(",", studyAbroadPeriods)]
+            );
         });
     </script>
 }
@@ -76,42 +83,39 @@
                                 <div class="form-group">
                                     @Html.LabelFor(s => s.StreetAddress)
                                     @Html.TextBoxFor(s => s.StreetAddress, new { @class = "form-control" })
-                                    @Html.TextBoxFor(s => s.StreetAddress2, new { @class = "form-control" })
+                                </div>
+                                <div class="form-group reducePadding">
+                                     @Html.TextBoxFor(s => s.StreetAddress2, new { @class = "form-control" })
                                 </div>
                             </div>
                             <div class="col-lg-6">
-                                <div class="form-group">
+                                <div class="form-group reducePadding">
                                     @Html.TextBoxFor(s => s.City, new { @class = "form-control", placeholder = "City" })
                                 </div>
                             </div>
                             <div class="col-lg-2">
-                                <div class="form-group">
+                                <div class="form-group reducePadding">
                                     @Html.TextBoxFor(s => s.State, new { @class = "form-control", placeholder = "State" })
                                 </div>
                             </div>
                             <div class="col-lg-4">
-                                <div class="form-group">
+                                <div class="form-group reducePadding">
                                     @Html.TextBoxFor(s => s.PostalCode, new { @class = "form-control", placeholder = "Postal Code" })
                                 </div>
                             </div>
                         </div>
 
-                        <div class="form-group">
-                            @Html.LabelFor(s => s.Citizenship)
-                            @Html.DropDownListFor(s => s.Citizenship, ViewBag.Countries as SelectList, "Please Select", new { @class = "form-control" })
-                        </div>
-
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                    @Html.LabelFor(s => s.SelectedLanguages)
-                                    @Html.ListBoxFor(s => s.SelectedLanguages, new MultiSelectList(ViewBag.Languages, "Id", "Name"), new { @class = "multiselect", multiple = "multiple" })
+                                    @Html.LabelFor(s => s.Citizenship)
+                                    @Html.DropDownListFor(s => s.Citizenship, ViewBag.Countries as SelectList, "Please Select", new { @class = "form-control" })
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                    @Html.LabelFor(s => s.SelectedDesiredLanguages)
-                                    @Html.ListBoxFor(s => s.SelectedDesiredLanguages, new MultiSelectList(ViewBag.Languages, "Id", "Name"), new { @class = "multiselect", multiple = "multiple" })
+                                    @Html.LabelFor(s => s.SelectedLanguages)
+                                    @Html.ListBoxFor(s => s.SelectedLanguages, new MultiSelectList(ViewBag.Languages, "Id", "Name"), new { @class = "multiselect", multiple = "multiple" })
                                 </div>
                             </div>
                         </div>
@@ -129,6 +133,55 @@
                                     @Html.EditorFor(s => s.InitialMeeting)
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Study Abroad</h3>
+                    </div>
+
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="form-group">
+                                    @Html.LabelFor(s => s.SelectedDesiredLanguages)
+                                    @Html.ListBoxFor(s => s.SelectedDesiredLanguages, new MultiSelectList(ViewBag.Languages, "Id", "Name"), new { @class = "multiselect", multiple = "multiple" })
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <div class="form-group">
+                                    @Html.LabelFor(s => s.StudyAbroadCountry)
+                                    @Html.DropDownListFor(s => s.StudyAbroadCountry, ViewBag.Countries as SelectList, "Please Select", new { @class = "form-control" })
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="form-group">
+                                    @Html.LabelFor(s => s.StudyAbroadYear)
+                                    @Html.DropDownListFor(s => s.StudyAbroadYear, ViewBag.GraduatingYears as SelectList, "Please Select", new { @class = "form-control" })
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="form-group">
+                                    @Html.LabelFor(s => s.StudyAbroadPeriod)
+                                    @Html.DropDownListFor(s => s.StudyAbroadPeriod, new SelectList(ViewBag.Semesters, "Id", "Name"), "Please Select", new { @class = "form-control" })
+                                </div>
+                            </div>
+                            <div class="col-lg-1">
+                                <div class="form-group" id="studyAbroadRowRemovals">
+                                    <label>&nbsp;</label>
+                                    <label>&nbsp;</label>
+                                </div>
+                                <div class="form-group reducePadding">&nbsp;</div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <p class="help-block text-right"><a href="" id="studyAbroadDestinations"><i class="fa fa-plus-circle"></i> Another Destination</a></p>
                         </div>
                     </div>
                 </div>
