--- a/AbroadAdvisor/Views/Student/Add.cshtml
+++ b/AbroadAdvisor/Views/Student/Add.cshtml
@@ -332,12 +332,12 @@
 
                         <div class="form-group">
                             @Html.LabelFor(s => s.CampusEmail)
-                            @Html.TextBoxFor(s => s.CampusEmail, new { @class = "form-control" })
+                            @Html.EditorFor(s => s.CampusEmail)
                         </div>
 
                         <div class="form-group">
                             @Html.LabelFor(s => s.AlternateEmail)
-                            @Html.TextBoxFor(s => s.AlternateEmail, new { @class = "form-control" })
+                            @Html.EditorFor(s => s.AlternateEmail)
                         </div>
                     </div>
                 </div>
