--- a/AbroadAdvisor/Views/User/Login.cshtml
+++ b/AbroadAdvisor/Views/User/Login.cshtml
@@ -40,7 +40,7 @@
             @Html.ValidationSummary()
 
             <div class="form-group">
-                @Html.TextBoxFor(u => u.UserName, new { @class = "form-control", placeholder = "User name" })
+                @Html.TextBoxFor(u => u.UserName, new { @class = "form-control", placeholder = "User name", autofocus = "autofocus" })
             </div>
 
             <div class="form-group">
@@ -52,11 +52,5 @@
     </div>
 
     @Scripts.Render("~/bundles/js")
-
-    <script>
-        $(function () {
-            $('input#UserName').select();
-        });
-    </script>
 </body>
 </html>
