--- a/AbroadAdvisor/Views/Student/Add.cshtml
+++ b/AbroadAdvisor/Views/Student/Add.cshtml
@@ -198,13 +198,13 @@
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     @Html.LabelFor(s => s.StudentId)
-                                    @Html.TextBoxFor(s => s.StudentId, new { @class = "form-control" })
+                                    @Html.TextBoxFor(s => s.StudentId, new { @class = "form-control", type = "number" })
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     @Html.LabelFor(s => s.Gpa)
-                                    @Html.TextBoxFor(s => s.Gpa, new { @class = "form-control" })
+                                    @Html.TextBoxFor(s => s.Gpa, new { @class = "form-control", type = "number", step = 0.01 })
                                 </div>
                             </div>
                         </div>
@@ -319,13 +319,13 @@
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     @Html.LabelFor(s => s.PhoneNumber)
-                                    @Html.TextBoxFor(s => s.PhoneNumber, new { @class = "form-control" })
+                                    @Html.TextBoxFor(s => s.PhoneNumber, new { @class = "form-control", type = "number" })
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     @Html.LabelFor(s => s.CellPhoneNumber)
-                                    @Html.TextBoxFor(s => s.CellPhoneNumber, new { @class = "form-control" })
+                                    @Html.TextBoxFor(s => s.CellPhoneNumber, new { @class = "form-control", type = "number" })
                                 </div>
                             </div>
                         </div>
