--- a/AbroadAdvisor/Views/User/Login.cshtml
+++ b/AbroadAdvisor/Views/User/Login.cshtml
@@ -34,7 +34,9 @@
             <h2>@ViewBag.Title</h2>
         </div>
 
-        @using (Html.BeginForm("Login", "User", FormMethod.Post, new { @class = "form-signin", role = "form" }))
+        @using (Html.BeginForm("Login", "User",
+            new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post,
+            new { @class = "form-signin", role = "form" }))
         {
             @Html.AntiForgeryToken()
             @Html.ValidationSummary()
