--- a/AbroadAdvisor/Views/Shared/_Layout.cshtml
+++ b/AbroadAdvisor/Views/Shared/_Layout.cshtml
@@ -35,21 +35,14 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
-                    <li @if (ViewBag.ActivePage == "dashboard") { <text> class="active" </text>  }><a href="@Url.Action("Index", "Home")"><i class="fa fa-dashboard"></i> Dashboard</a></li>
-                    @*<li><a href="charts.html"><i class="fa fa-bar-chart-o"></i> Charts</a></li>*@
+                    <li @if (ViewBag.ActivePage == "dashboard") { <text>class="active"</text> }><a href="@Url.Action("Index", "Home")"><i class="fa fa-dashboard"></i> Dashboard</a></li>
                     <li @if (ViewBag.ActivePage == "students") { <text>class="active"</text> }><a href="@Url.Action("List", "Student")"><i class="fa fa-table"></i> Students</a></li>
-                    @*<li><a href="forms.html"><i class="fa fa-edit"></i> Forms</a></li>
-                    <li><a href="typography.html"><i class="fa fa-font"></i> Typography</a></li>
-                    <li><a href="bootstrap-elements.html"><i class="fa fa-desktop"></i> Bootstrap Elements</a></li>
-                    <li><a href="bootstrap-grid.html"><i class="fa fa-wrench"></i> Bootstrap Grid</a></li>
-                    <li><a href="blank-page.html"><i class="fa fa-file"></i> Blank Page</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-caret-square-o-down"></i> Dropdown <b class="caret"></b></a>
+                    <li @if (ViewBag.ActivePage == "experiences") { <text>class="active"</text> }><a href="@Url.Action("Active", "Experience")"><i class="fa fa-plane"></i> Experiences</a></li>
+                    @*<li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-plane"></i> Experience <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Dropdown Item</a></li>
-                            <li><a href="#">Another Item</a></li>
-                            <li><a href="#">Third Item</a></li>
-                            <li><a href="#">Last Item</a></li>
+                            <li><a href="#">Open</a></li>
+                            <li><a href="#">Create</a></li>
                         </ul>
                     </li>*@
                 </ul>
