--- a/AbroadAdvisor/Views/Student/Add.cshtml
+++ b/AbroadAdvisor/Views/Student/Add.cshtml
@@ -3,31 +3,14 @@
 @model StudentModel
 
 @{
-    bool addingStudent = Model == null || Model.Id == default(int);
-    ViewBag.Title = addingStudent ? "Add" : "Edit";
-    string submitButtonText = addingStudent ? "Add Student Profile" : "Save Changes";
-
-    IEnumerable<int> studyAbroadCountries = Enumerable.Empty<int>();
-    IEnumerable<int> studyAbroadYears = Enumerable.Empty<int>();
-    IEnumerable<int> studyAbroadPeriods = Enumerable.Empty<int>();
-    
-    if (Model != null)
-    {
-        studyAbroadCountries = Model.StudyAbroadCountry;
-        studyAbroadYears = Model.StudyAbroadYear;
-        studyAbroadPeriods = Model.StudyAbroadPeriod;
-    }
+    ViewBag.Title = "Add";
 }
 
 @section FooterScript {
     <script>
         $(function () {
             Bennett.AbroadAdvisor.initStudentAddEdit();
-            Bennett.AbroadAdvisor.addStudyAbroadRows(
-                [@String.Join(",", studyAbroadCountries)],
-                [@String.Join(",", studyAbroadYears)],
-                [@String.Join(",", studyAbroadPeriods)]
-            );
+            Bennett.AbroadAdvisor.addStudyAbroadRows([], [], []);
         });
     </script>
 }
@@ -36,11 +19,6 @@
     <div class="row">
         <div class="col-lg-12">
             <h1>@ViewBag.Title Student</h1>
-            <ol class="breadcrumb">
-                <li><a href="@Url.Action("Index", "Home")"><i class="fa fa-dashboard"></i> Dashboard</a></li>
-                <li><a href="@Url.Action("List", "Student")"><i class="fa fa-users"></i> Students</a></li>
-                <li class="active"><i class="fa fa-edit"></i> @ViewBag.Title Student</li>
-            </ol>
         </div>
     </div>
 
@@ -48,7 +26,7 @@
     {
         @Html.AntiForgeryToken()
         @Html.ValidationSummary()
-        
+
         <div class="row">
             <div class="col-lg-6">
                 <div class="panel panel-primary">
@@ -85,7 +63,7 @@
                                     @Html.TextBoxFor(s => s.StreetAddress, new { @class = "form-control" })
                                 </div>
                                 <div class="form-group reducePadding">
-                                     @Html.TextBoxFor(s => s.StreetAddress2, new { @class = "form-control" })
+                                    @Html.TextBoxFor(s => s.StreetAddress2, new { @class = "form-control" })
                                 </div>
                             </div>
                             <div class="col-lg-6">
@@ -344,6 +322,6 @@
             </div>
         </div>
 
-        <button type="submit" class="btn btn-default">@submitButtonText</button>
+        <button type="submit" class="btn btn-default">Add Student Profile</button>
     }
 }
