--- a/AbroadAdvisor/Views/Student/View.cshtml
+++ b/AbroadAdvisor/Views/Student/View.cshtml
@@ -1,4 +1,5 @@
-﻿@using Bennett.AbroadAdvisor.Models;
+﻿@using Bennett.AbroadAdvisor.Core;
+@using Bennett.AbroadAdvisor.Models;
 
 @model StudentModel
 
@@ -30,6 +31,53 @@
                         {
                             <br />
                             <a href="mailto:@Model.AlternateEmail">@Model.AlternateEmail</a>
+                        }
+                    </address>
+
+                    <address>
+                        @if (!String.IsNullOrEmpty(Model.StreetAddress))
+                        {
+                            @Model.StreetAddress
+                            if (!String.IsNullOrEmpty(Model.StreetAddress2))
+                            {
+                                <br />
+                                @Model.StreetAddress2
+                            }
+                            <br />
+                            @Model.City@:, @Model.State @Model.PostalCode
+                        }
+                        
+                        @if (!String.IsNullOrEmpty(Model.PhoneNumber) || !String.IsNullOrEmpty(Model.CellPhoneNumber))
+                        {
+                            <br />
+                            if (!String.IsNullOrEmpty(Model.PhoneNumber))
+                            {
+                                <abbr title="Phone">P:</abbr>
+                                if (Request.Browser.CanInitiateVoiceCall)
+                                {
+                                    <a href="tel:@Model.PhoneNumber">@Formatter.PhoneNumber(Model.PhoneNumber)</a>
+                                }
+                                else
+                                {
+                                    @Formatter.PhoneNumber(Model.PhoneNumber)
+                                }
+                            }
+                            if (!string.IsNullOrEmpty(Model.PhoneNumber) && !String.IsNullOrEmpty(Model.CellPhoneNumber))
+                            {
+                                    <br />
+                            }
+                            if (!String.IsNullOrEmpty(Model.CellPhoneNumber))
+                            {
+                                <abbr title="Cell">C:</abbr>
+                                if (Request.Browser.CanInitiateVoiceCall)
+                                {
+                                    <a href="tel:@Model.CellPhoneNumber">@Formatter.PhoneNumber(Model.CellPhoneNumber)</a>
+                                }
+                                else
+                                {
+                                    @Formatter.PhoneNumber(Model.CellPhoneNumber)
+                                }
+                            }
                         }
                     </address>
                 </div>
