--- a/AbroadAdvisor/Views/Experience/Active.cshtml
+++ b/AbroadAdvisor/Views/Experience/Active.cshtml
@@ -11,7 +11,7 @@
 @section Body {
     <div class="row">
         <div class="col-lg-8">
-            <h1>Students Abroad <small>@Model.Count.ToString("N0") total</small></h1>
+            <h1>Students Abroad <small>@Model.Count.ToString("N0") currently abroad</small></h1>
         </div>
     </div>
 
