--- a/AbroadAdvisor/Views/Student/List.cshtml
+++ b/AbroadAdvisor/Views/Student/List.cshtml
@@ -14,10 +14,17 @@
 
             $('a.studentlisttooltop').tooltip();
             $('a.studentlistmodal').modal();
+            $('.collapse').collapse();
 
             // Load cached modal content and then refetch remote content.
             $(document.body).on('hidden.bs.modal', function () {
                 $('#noteModal').removeData('bs.modal');
+            });
+
+            $('.multiselect').multiselect({
+                numberDisplayed: 1,
+                buttonContainer: '<div class="button-default" />',
+                maxHeight: 300
             });
         });
     </script>
@@ -41,6 +48,40 @@
             </ol>
         </div>
     </div>
+
+    @using (Html.BeginForm("Search", "Student", FormMethod.Post, new { @class = "form-inline", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Search</div>
+                    <div class="panel-body">
+                        <div class="form-group">
+                            @Html.Label("SelectedMajors", "Majors:", new { @class = "col-lg-2 control-label" })
+                            <div class="col-lg-4">
+                                @Html.ListBox("SelectedMajors", new MultiSelectList(ViewBag.AvailableMajors, "Id", "Name"), new { @class = "multiselect", multiple = "multiple" })
+                            </div>
+
+                            @Html.Label("SelectedGraduatingYears", "Graduating:", new { @class = "col-lg-2 control-label" })
+                            <div class="col-lg-4">
+                                @Html.ListBox("SelectedGraduatingYears", new MultiSelectList(ViewBag.GraduatingYearsAsEnumerable, "Id", "Name"), new { @class = "multiselect", multiple = "multiple" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-sm-offset-10 col-lg-2">
+                                <button type="submit" class="btn btn-default">Filter Students</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+
+    <br />
 
     <div class="table-responsive">
         <table class="table table-bordered table-hover table-striped tablesorter">
