Separate JavaScript categories

--- a/AbroadAdvisor/Views/Note/List.cshtml
+++ b/AbroadAdvisor/Views/Note/List.cshtml
@@ -60,6 +60,6 @@
             $('#newnote').submit();
         });
 
-        Bennett.AbroadAdvisor.handleNewNote('#newnote', 'textarea#Note', '@user.FirstName', '@user.LastName');
+        Bennett.AbroadAdvisor.Student.handleNewNote('#newnote', 'textarea#Note', '@user.FirstName', '@user.LastName');
     });
 </script>
