--- a/AbroadAdvisor/Views/Student/Add.cshtml
+++ b/AbroadAdvisor/Views/Student/Add.cshtml
@@ -9,8 +9,8 @@
 @section FooterScript {
     <script>
         $(function () {
-            Bennett.AbroadAdvisor.initStudentAddEdit();
-            Bennett.AbroadAdvisor.addStudyAbroadRows([], [], []);
+            Bennett.AbroadAdvisor.Student.initStudentAddEdit();
+            Bennett.AbroadAdvisor.Student.addStudyAbroadRows([], [], []);
         });
     </script>
 }
