--- a/AbroadAdvisor/Views/Student/Edit.cshtml
+++ b/AbroadAdvisor/Views/Student/Edit.cshtml
@@ -13,8 +13,8 @@
 @section FooterScript {
     <script>
         $(function () {
-            Bennett.AbroadAdvisor.initStudentAddEdit();
-            Bennett.AbroadAdvisor.addStudyAbroadRows(
+            Bennett.AbroadAdvisor.Student.initStudentAddEdit();
+            Bennett.AbroadAdvisor.Student.addStudyAbroadRows(
                 [@String.Join(",", studyAbroadCountries)],
                 [@String.Join(",", studyAbroadYears)],
                 [@String.Join(",", studyAbroadPeriods)]
