--- a/AbroadAdvisor/Views/Student/List.cshtml
+++ b/AbroadAdvisor/Views/Student/List.cshtml
@@ -10,22 +10,7 @@
 @section FooterScript {
     <script>
         $(function () {
-            'use strict';
-
-            $('a.studentlisttooltop').tooltip();
-            $('a.studentlistmodal').modal();
-            $('.collapse').collapse();
-
-            // Load cached modal content and then refetch remote content.
-            $(document.body).on('hidden.bs.modal', function () {
-                $('#noteModal').removeData('bs.modal');
-            });
-
-            $('.multiselect').multiselect({
-                numberDisplayed: 1,
-                buttonContainer: '<div class="button-default" />',
-                maxHeight: 300
-            });
+            Bennett.AbroadAdvisor.Student.initStudentList();
         });
     </script>
 }
@@ -49,37 +34,42 @@
         </div>
     </div>
 
-    @using (Html.BeginForm("Search", "Student", FormMethod.Post, new { @class = "form-inline", role = "form" }))
-    {
-        @Html.AntiForgeryToken()
-        
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="panel panel-default">
-                    <div class="panel-heading">Search</div>
-                    <div class="panel-body">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">Search</div>
+                <div class="panel-body">
+                    @using (Html.BeginForm("Search", "Student", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                    {
+                        @Html.AntiForgeryToken()
+
                         <div class="form-group">
-                            @Html.Label("SelectedMajors", "Majors:", new { @class = "col-lg-2 control-label" })
-                            <div class="col-lg-4">
+                            @Html.Label("SelectedMajors", "Majors:", new { @class = "col-md-2 control-label" })
+                            <div class="col-md-2">
                                 @Html.ListBox("SelectedMajors", new MultiSelectList(ViewBag.AvailableMajors, "Id", "Name"), new { @class = "multiselect", multiple = "multiple" })
                             </div>
 
-                            @Html.Label("SelectedGraduatingYears", "Graduating:", new { @class = "col-lg-2 control-label" })
-                            <div class="col-lg-4">
+                            @Html.Label("SelectedGraduatingYears", "Graduating:", new { @class = "col-md-2 control-label" })
+                            <div class="col-md-2">
                                 @Html.ListBox("SelectedGraduatingYears", new MultiSelectList(ViewBag.GraduatingYearsAsEnumerable, "Id", "Name"), new { @class = "multiselect", multiple = "multiple" })
+                            </div>
+
+                            @Html.Label("SelectedCountries", "Countries Visited:", new { @class = "col-md-2 control-label" })
+                            <div class="col-md-2">
+                                @Html.DropDownGroupList("SelectedCountries", ViewBag.StudyAbroadPlaces as IEnumerable<GroupedSelectListItem>, new { @class = "multiselect", multiple = "multiple" })
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <div class="col-sm-offset-10 col-lg-2">
+                            <div class="col-md-offset-10 col-md-2">
                                 <button type="submit" class="btn btn-default">Filter Students</button>
                             </div>
                         </div>
-                    </div>
+                    }
                 </div>
             </div>
         </div>
-    }
+    </div>
 
     <br />
 
