--- a/AbroadAdvisor/Views/Student/List.cshtml
+++ b/AbroadAdvisor/Views/Student/List.cshtml
@@ -74,7 +74,7 @@
     <br />
 
     <div class="table-responsive">
-        <table class="table table-bordered table-hover table-striped tablesorter">
+        <table class="table table-bordered table-hover table-striped tablesorter table-condensed">
             <thead>
                 <tr>
                     <th>Name <i class="fa fa-sort"></i></th>
