--- a/AbroadAdvisor/Views/Student/View.cshtml
+++ b/AbroadAdvisor/Views/Student/View.cshtml
@@ -7,6 +7,14 @@
     ViewBag.Title = "View";
 }
 
+@section FooterScript {
+    <script>
+        $(function () {
+            Bennett.AbroadAdvisor.Student.initStudentView();
+        });
+    </script>
+}
+
 @section Body {
     <div class="row">
         <div class="col-lg-8">
@@ -169,7 +177,24 @@
                         }
                     </address>
                 </div>
+                <div class="panel-footer">
+                    <ul class="list-inline" style="margin-bottom: 0">
+                        <li>
+                            <a href="@Url.Action("List", "Note", new { studentId = Model.Id })"
+                               data-toggle="modal" data-target="#noteModal"
+                               class="studentlisttooltop studentlistmodel" data-placement="top"
+                               title="Notes"><i class="fa fa-book fa-lg"></i></a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Edit", "Student", new { id = Model.Id })"
+                               class="studentlisttooltop" data-placement="top"
+                               title="Edit"><i class="fa fa-pencil fa-lg"></i></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="noteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 }
