--- a/AbroadAdvisor/Views/Shared/_Layout.cshtml
+++ b/AbroadAdvisor/Views/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
 <!doctype html>
 <html>
 <head>
+    <meta charset="utf-8" />
+    <meta name="robots" content="noindex,nofollow" />
     <meta name="viewport" content="width=device-width" />
     <title>@pageTitle</title>
     @Styles.Render("~/bundles/css")
