Show all experiences not just active

--- a/AbroadAdvisor/Views/Experience/List.cshtml
+++ b/AbroadAdvisor/Views/Experience/List.cshtml
@@ -5,13 +5,13 @@
 @model IList<StudyAbroadModel>
 
 @{
-    ViewBag.Title = "Active";
+    ViewBag.Title = "List";
 }
 
 @section Body {
     <div class="row">
         <div class="col-lg-8">
-            <h1>Students Abroad <small>@Model.Count.ToString("N0") currently abroad</small></h1>
+            <h1>Students Abroad <small>@Model.Count.ToString("N0") total</small></h1>
         </div>
     </div>
 
