--- a/AbroadAdvisor/Views/Shared/_Layout.cshtml
+++ b/AbroadAdvisor/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                 <ul class="nav navbar-nav side-nav">
                     <li @if (ViewBag.ActivePage == "dashboard") { <text>class="active"</text> }><a href="@Url.Action("Index", "Home")"><i class="fa fa-dashboard"></i> Dashboard</a></li>
                     <li @if (ViewBag.ActivePage == "students") { <text>class="active"</text> }><a href="@Url.Action("List", "Student")"><i class="fa fa-table"></i> Students</a></li>
-                    <li @if (ViewBag.ActivePage == "experiences") { <text>class="active"</text> }><a href="@Url.Action("Active", "Experience")"><i class="fa fa-plane"></i> Experiences</a></li>
+                    <li @if (ViewBag.ActivePage == "experiences") { <text>class="active"</text> }><a href="@Url.Action("List", "Experience")"><i class="fa fa-plane"></i> Experiences</a></li>
                     @*<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-plane"></i> Experience <b class="caret"></b></a>
                         <ul class="dropdown-menu">
