--- a/AbroadAdvisor/Views/Student/Edit.cshtml
+++ b/AbroadAdvisor/Views/Student/Edit.cshtml
@@ -246,32 +246,46 @@
                                 </div>
 
                                 <div class="row">
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-4">
                                         <div class="form-group">
                                             @Html.LabelFor(s => s.PellGrantRecipient)
                                             @Html.DropDownListFor(s => s.PellGrantRecipient, new SelectList(
-                                        new[]
-                                        {
-                                            new { Value = false, Text = "No" },
-                                            new { Value = true, Text = "Yes" }
-                                        },
-                                        "Value",
-                                        "Text",
-                                        Model), "Please Select", new { @class = "form-control" })
+                                                new[]
+                                                {
+                                                    new { Value = false, Text = "No" },
+                                                    new { Value = true, Text = "Yes" }
+                                                },
+                                                "Value",
+                                                "Text",
+                                                Model), "Please Select", new { @class = "form-control" })
                                         </div>
                                     </div>
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-4">
                                         <div class="form-group">
                                             @Html.LabelFor(s => s.HasPassport)
                                             @Html.DropDownListFor(s => s.HasPassport, new SelectList(
-                                        new[]
-                                        {
-                                            new { Value = false, Text = "No" },
-                                            new { Value = true, Text = "Yes" }
-                                        },
-                                        "Value",
-                                        "Text",
-                                        Model), "Please Select", new { @class = "form-control" })
+                                                new[]
+                                                {
+                                                    new { Value = false, Text = "No" },
+                                                    new { Value = true, Text = "Yes" }
+                                                },
+                                                "Value",
+                                                "Text",
+                                                Model), "Please Select", new { @class = "form-control" })
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <div class="form-group">
+                                            @Html.LabelFor(s => s.PhiBetaDeltaMember)
+                                            @Html.DropDownListFor(s => s.PhiBetaDeltaMember, new SelectList(
+                                                new[]
+                                                {
+                                                    new { Value = false, Text = "No" },
+                                                    new { Value = true, Text = "Yes" }
+                                                },
+                                                "Value",
+                                                "Text",
+                                                Model), "Please Select", new { @class = "form-control" })
                                         </div>
                                     </div>
                                 </div>
@@ -281,28 +295,28 @@
                                         <div class="form-group">
                                             @Html.LabelFor(s => s.LivingOnCampus)
                                             @Html.DropDownListFor(s => s.LivingOnCampus, new SelectList(
-                                        new[]
-                                        {
-                                            new { Value = true, Text = "On-Campus" },
-                                            new { Value = false, Text = "Off-Campus" }
-                                        },
-                                        "Value",
-                                        "Text",
-                                        Model), "Please Select", new { @class = "form-control" })
+                                                new[]
+                                                {
+                                                    new { Value = true, Text = "On-Campus" },
+                                                    new { Value = false, Text = "Off-Campus" }
+                                                },
+                                                "Value",
+                                                "Text",
+                                                Model), "Please Select", new { @class = "form-control" })
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group">
                                             @Html.LabelFor(s => s.EnrolledFullTime)
                                             @Html.DropDownListFor(s => s.EnrolledFullTime, new SelectList(
-                                        new[]
-                                        {
-                                            new { Value = true, Text = "Full-time Student" },
-                                            new { Value = false, Text = "Part-time Student" }
-                                        },
-                                        "Value",
-                                        "Text",
-                                        Model), "Please Select", new { @class = "form-control" })
+                                                new[]
+                                                {
+                                                    new { Value = true, Text = "Full-time Student" },
+                                                    new { Value = false, Text = "Part-time Student" }
+                                                },
+                                                "Value",
+                                                "Text",
+                                                Model), "Please Select", new { @class = "form-control" })
                                         </div>
                                     </div>
                                 </div>
